--- a/README
+++ b/README
@@ -1,10 +1,12 @@
 # Relationship-Enhancement-Scripts
 Are you constantly stressed by your operating system? You are constantly in dispute?
 Then I have something for you, the Relationship-Enhancement-Scripts for a better, trustworthy cooperation
-between humans and machines. That scripts should easify your life and give you more control over your operating system.
+between humans and machines. That scripts should simplify your life and give you more control over your operating system.
+All scripts can be directly executed under Windows without any installation of further software.
 
 **Hint:** You can install Powershell on your Mac and Linux system, too.
-But the scripts were written with Powershell 5.1+ and designed for Windows 10 Version 1703+. 
+But the scripts were written with Powershell 5.1+ and designed for Windows 10 Version 1703 up to 1803.
+So, I cannot guarantee that they will work on other systems than Windows 10 Version 1703 up to 1803.
 
 ## Dated Folder Creator
 Creates a number of folders with the current date and a count with padding in the format *yyyy-MM-dd-[count]* 
@@ -20,7 +22,7 @@ Lists the names from active processes.
 Lists the names from services.
 
 ## Windows 10 Configurator
-Configures Windows 10 Version 1703+ after installation:
+Configures Windows 10 Version 1703 up to 1803 after a reinstallation:
 - activates the classic photo viewer
 - activates name extensions
 - activates thin taskbar with small taskbar icons
