Update README.md (+5 squashed commit)
Squashed commit:

[530d2ed] Update README.md

[bf9e423] Update README.md

[861d1f1] Update README.md

[8bec88d] Update README.md

[10bdd3e] Update README.md

--- a/README
+++ b/README
@@ -1,3 +1,5 @@
+<img src="https://github.com/AlexanderMattheis/Relationship-Enhancement-Scripts/blob/master/res_logo.png">
+
 # Relationship-Enhancement-Scripts
 Are you constantly stressed by your operating system? You are constantly in dispute?
 Then I have something for you, the Relationship-Enhancement-Scripts for a better, trustworthy cooperation
