Added script that converts DOC-files into PDF-files.

--- a/README
+++ b/README
@@ -20,6 +20,9 @@ Lists all files from current directory with different settings.
 ## Processes Lister
 Lists the names from active processes.
 
+## Recursive DOC/DOCX to PDF Converter
+Converts all *.doc(x)-files into *.pdf-files (Microsoft Word 2016 is necessary).
+
 ## Services Lister
 Lists the names from services.
 
